--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gluestack-ui/themed": "^0.1.9",
     "@react-navigation/bottom-tabs": "^6.5.8",
+    "@react-navigation/native": "^6.1.7",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
+    "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
