--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@gluestack-ui/themed": "^0.1.9",
+    "@react-native-community/datetimepicker": "^7.4.2",
+    "@react-native-picker/picker": "^2.5.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "expo": "~49.0.8",
@@ -19,6 +21,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-24h-timepicker": "^1.1.0",
+    "react-native-calendar-picker": "^7.1.4",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-svg": "13.4.0",
