--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.72.4",
     "react-native-24h-timepicker": "^1.1.0",
     "react-native-calendar-picker": "^7.1.4",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-svg": "13.4.0",
